; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/radio/extr_radio-gemtek-pci.c_gemtek_pci_mute.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/radio/extr_radio-gemtek-pci.c_gemtek_pci_mute.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gemtek_pci = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.gemtek_pci*)* @gemtek_pci_mute to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gemtek_pci_mute(%struct.gemtek_pci* %0) #0 {
  %2 = alloca %struct.gemtek_pci*, align 8
  store %struct.gemtek_pci* %0, %struct.gemtek_pci** %2, align 8
  %3 = load %struct.gemtek_pci*, %struct.gemtek_pci** %2, align 8
  %4 = getelementptr inbounds %struct.gemtek_pci, %struct.gemtek_pci* %3, i32 0, i32 1
  %5 = call i32 @mutex_lock(i32* %4)
  %6 = load %struct.gemtek_pci*, %struct.gemtek_pci** %2, align 8
  %7 = getelementptr inbounds %struct.gemtek_pci, %struct.gemtek_pci* %6, i32 0, i32 2
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @outb(i32 31, i32 %8)
  %10 = load %struct.gemtek_pci*, %struct.gemtek_pci** %2, align 8
  %11 = getelementptr inbounds %struct.gemtek_pci, %struct.gemtek_pci* %10, i32 0, i32 0
  store i32 1, i32* %11, align 4
  %12 = load %struct.gemtek_pci*, %struct.gemtek_pci** %2, align 8
  %13 = getelementptr inbounds %struct.gemtek_pci, %struct.gemtek_pci* %12, i32 0, i32 1
  %14 = call i32 @mutex_unlock(i32* %13)
  ret void
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @outb(i32, i32) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
